# FCMR

./: .env.example  .env.production.example  .gitattributes  .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  README.md  audit_sampling_cli.py  commit_msg.txt  create_infrastructure_guide.js  desktop_backend.py  electron-builder.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  start.bat  test_audit_sampling.py  test_audit_sampling_detailed.py  test_e2e_workpaper.py  test_upload_flow2.py
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
api/: index.py
app/: main.py
app/api/: auth.py  blob_upload.py  consolidate.py  downloads.py  ead_analytics.py  ead_consolidate.py  runs.py  settings.py  system.py  uploads.py
docs/: PRODUCT_BACKLOG.md  RELEASE_PROCESS.md  TROUBLESHOOTING.md  USER_GUIDE.md
electron/: main.js  preload.js  updater.js
fcmr_core/: backup.py  config.py  logging_setup.py  security.py
fcmr_core/analytics/: cm_analytics.py  cm_catalogue.py  cm_summary.py  (+2 more)
tests/: conftest.py  generate_synthetic.py  test_aadhaar_masking.py  test_beneficiary.py  test_categories.py  test_cm_analytics.py  test_cm_catalogue.py  test_cm_rules_golden.py  test_cm_summary.py  test_consolidation.py  test_disabled_rules.py  test_duplicates_ucid_scope.py  test_e2e_workpaper.py  test_ead_baseline_golden.py  test_ead_summary.py  test_imports.py  test_kyc_format.py  test_pincode_address.py  test_reporting_builder.py  test_rules_empty_inputs.py  test_sampling.py  test_security.py  test_ucid_golden.py  test_vercel_secret.py  test_web_e2e.py
(+52 files in other folders)
