[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fcmr"
version = "0.1.0"
description = "SanGir Automations — Audit Analytics & Automated Solutions for NBFC Loan Audits"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=16",
    "pyyaml>=6.0",
    "aiofiles>=23.2",
    "openpyxl>=3.1",
    "itsdangerous>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "black>=24",
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "fcmr_core*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "perf: slow end-to-end performance tests (run with pytest -m perf)",
]
testpaths = ["tests"]
